This file documents the revision history for the Monitoring Webinterface Thruk.

0.92    Sun Apr 10 20:15:13 CEST 2011
          - added config tool for cgi.cfg and thruk.conf
          - sidebar search autosubmits on select
          - fixed problem with "delete all downtimes" link

0.90    Sun Mar 27 22:52:23 CET 2011
          - made style selectable within filter
          - added inline pnp graphs
          - added wait feature when rescheduling checks
          - Nuvola theme saves collapsed state of menu
          - fixed themes
            - removed useless scrollbar in Nuvola theme
            - fixed jumping rows in Nuvola theme

0.86    Sun Mar 20 19:24:34 CET 2011
          - added new problems view
          - added new option 'check_local_states'
          - added optional check for remote backend status by local backends
          - fixed themes
            - removed useless scrollbar in Nuvola theme
            - removed margin from Wakizashi
            - fixed jumping rows in Nuvola theme
            - fixed jumping status in Vautour theme
          - fixed ajax autocomplete
          - fixed paging on config page
          - fixed ajax search in menu when using theme Vautour (Vincent Besancon)

0.84    Mon Mar 14 16:49:56 CET 2011
          - configurable plugins path
          - added missing image for the Nuvola theme
          - fixed tmp_path option
          - fixed accessing logfiles from changing backends
          - fixed host totals when using servicegroup filter

0.82.1  Wed Feb  9 15:27:54 CET 2011
          - fixed encoding problem with french date format

0.82    Mon Feb  7 23:40:50 CET 2011
          - fixed excel export with special characters in plugin output
          - fixed Undefined subroutine &FCGI::ProcManager::MaxRequestsThruk::self_or_default error

0.80    Sun Jan 30 14:07:49 CET 2011
          - fixed backends using groups authentication
          - fixed parsing of resource.cfg when macros are used twice