@@ -1,0 +1,12 @@
+TD.reportDataOdd {
+  padding: 1px;
+  background-color: #E7E5DD;
+  height: 22px;
+}
+
+TD.reportDataEven {
+  padding: 1px;
+  background-color: #DEDBD2;
+  height: 22px;
+}
+
